src/test/deca/codegen/valid/no-objects/assign_direct_init.deca
// Description:
//    Test d'une variable assignée immédiatement.
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 15/01/2022
{
    boolean a = true;
    println("Ok");
}