src/test/deca/codegen/invalid/no-objects/overflow_mult.deca
// Description:
//    Test d'une mult de flottant jusqu'a overflow
//
// Resultats:
//    Erreur : débordement pendant opération arithmétique entre deux flottants.
//
// Historique:
//    cree le 15/01/2022
{
    float x = 0x1.0p+127;
    println(x*x);
}
